# ChangeLog for app-admin/ccze
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/ccze/ChangeLog,v 1.31 2012/02/16 19:29:19 phajdan.jr Exp $

  16 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> ccze-0.2.1-r3.ebuild:
  x86 stable wrt bug #396745

  04 Feb 2012; Brent Baude <ranger@gentoo.org> ccze-0.2.1-r3.ebuild:
  Marking ccze-0.2.1-r3 ppc for bug 396745

  03 Feb 2012; Agostino Sarubbo <ago@gentoo.org> ccze-0.2.1-r3.ebuild:
  Stable for amd64, wrt bug #396745

  03 Feb 2012; Agostino Sarubbo <ago@gentoo.org> ccze-0.2.1-r3.ebuild:
  Cleanup before stabilization

  17 May 2010; Christian Birchinger <joker@gentoo.org> ccze-0.2.1-r2.ebuild,
  ccze-0.2.1-r3.ebuild:
  Changed SRC_URI to gentoo mirrors and HOMEPAGE to a dummy one.

*ccze-0.2.1-r3 (22 Jan 2010)

  22 Jan 2010; Jeroen Roovers <jer@gentoo.org> +ccze-0.2.1-r3.ebuild,
  +files/ccze-ldflags.patch:
  Respect LDFLAGS.

  23 Oct 2008; Christian Birchinger <joker@gentoo.org> ccze-0.2.1-r2.ebuild:
  Added tc-export CC. See bug #243314

  23 Jun 2007; Christian Birchinger <joker@gentoo.org>
  -ccze-0.2.1-r1.ebuild:
  Removing -r1 version because it segfaults.

  23 Jun 2007; Christoph Mende <angelos@gentoo.org> ccze-0.2.1-r2.ebuild:
  Stable on amd64 wrt bug 182941

  07 Jun 2007; Christian Faulhammer <opfer@gentoo.org> ChangeLog:
  modified ChangeLog to meet common standards

  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  ccze-0.2.1-r2.ebuild:
  ppc stable

  09 Apr 2007; Christian Birchinger <joker@gentoo.org> ccze-0.2.1-r2.ebuild:
  Added sparc stable keyword

  20 Mar 2007; Andrej Kacian <ticho@gentoo.org> ccze-0.2.1-r2.ebuild:
  Stable on x86.

*ccze-0.2.1-r2 (17 Dec 2006)

  17 Dec 2006; Christian Birchinger <joker@gentoo.org>
  +files/ccze-segfault.patch, +ccze-0.2.1-r2.ebuild:
  Added a patch for the missing optarg in recent glibcs

  17 Dec 2006; Christian Birchinger <joker@gentoo.org> -ccze-0.2.1.ebuild:
  Remove old version
