@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/killproc
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/killproc/ChangeLog,v 1.21 2012/02/16 19:32:17 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/killproc/ChangeLog,v 1.22 2012/03/18 15:52:28 armin76 Exp $
+
+  18 Mar 2012; Raúl Porcel <armin76@gentoo.org> killproc-1.12-r2.ebuild,
+  killproc-2.13.ebuild:
+  Drop sparc keywords
 
   16 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> killproc-2.13.ebuild:
   x86 stable wrt bug #396753
